objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Comments__c</fullName>
        <defaultValue>&quot;I am interested in learning more about your solution, pricing, and how you could help my organization.&quot;</defaultValue>
        <label>Pardot Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>test_contact__c</fullName>
        <label>test contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>